feat: playground유저지만 app유저가 아닌 유저를 제외시키도록 수정  (#283)